Update and rename seng438-a3-team_number.md to seng438-a3-26.md

--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -49,7 +49,7 @@ and the statement modifying the total to be equal to 0.0.
 
 <img src="media/DataUtilitiesCoverage.png" alt="media/DataUtilitiesCoverage.png" width="360"/>
 <img src="media/RangeCoverage.png" alt="media/RangeCoverage.png" width="360"/>
-
+Some branches of the code were inaccessable (infeasible path) so the statement coverage was unable to achieve atleast 90% for DataUtilities(89.9%) and Range(85%)
 # 6 Pros and Cons of coverage tools used and Metrics you report
 
 Text…
