--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -27,29 +27,42 @@ Our testing strategy for this assignment would make use of the coverage tool pro
 
 # 4 A high level description of five selected test cases you have designed using coverage information, and how they have increased code coverage
 
-**1. getCumulativePercentages(KeyedValues data) test case nullFilledKeyedValues()**
+**1. getCumulativePercentages(KeyedValues data) test case nullFilledKeyedValues() in getCumulativePercentagesTest.java**
 
 nullFilledKeyedValues()
 This test case increased branch coverage in getCumulativePercentages by reaching a branch in the code that was previously not covered. 
 The test case created a KeyedValues object with valid keys but null values associated with each of the keys. This covered the branch in getCumulativePercentages where the value was checked to be null or not. 
 
-**2. equal(double[][] a, double[][] b) test case SecondNullArray()**
+**2. equal(double[][] a, double[][] b) test case SecondNullArray() in equalTest.java**
 
 This test case increased method coverage, line coverage and branch coverage for the equal function in DataUtilities.
 The test case used a non null array as the first argument and a null array as the second argument. This covers the function equal 
 that was not previously covered, the branch in equal where b == null and the statement returning false.
 
- **3. calculateRowTotal(Values2D data, int row,int[] validCols) test case calculateNegColCount()**
+ **3. calculateRowTotal(Values2D data, int row,int[] validCols) test case calculateNegColCount() in caculateRowTotalTest2.java**
 
 calculateNegColCount()
 This test case increased method coverage, line coverage and branch coverage for the calculateRowTotal(Values2D data, int row,int[] validCols)  function in DataUtilities. The test case created a mock for values2D with a column count of negative one and passed it as an argument for data in calculateRowTotal(Values2D data, int row,int[] validCols). This covers the function calculateRowTotal(Values2D data, int row,int[] validCols) that was not previously covered, the branch in the function checking if the column count was less than zero,
 and the statement modifying the total to be equal to 0.0.
+
+**4. clone(double[][] source) test case filledArray() in cloneTest.java**
+
+This test case increased method coverage, statement coverage, and branch coverage for the clone(double[][] source) function 
+in DataUtilities. The test case created a 2d array filled with valid not null double values and used it as an argument for clone.
+This covers the clone method that previously was not covered, the branch in the function that entered the loop with the source length 
+being greater than 0, and the statements within the while loop where the values were not null.
+
+**5. calculateColumnTotal(Values2D data, int column,int[] validRows) test case calculateNoRows() in calculateColumnTotalTest2.java**
+
+This test case increased method coverage, and branch coverage for the calculateColumnTotal(Values2D data, int column,int[] validRows) function in DataUtilities. The test case used a mock to create an empty Values2D table with no rows or columns and 
+passed it as an argument in calculateColumnTotal(Values2D data, int column,int[] validRows). This covers the calculateColumnTotal(Values2D data, int column,int[] validRows) method not previously covered, the branch in the function of the for loop where the length is equals to zero and does not enterr into the for loop.
 
 # 5 A detailed report of the coverage achieved of each class and method (a screen shot from the code cover results in green and red color would suffice)
 
 <img src="media/DataUtilitiesCoverage.png" alt="media/DataUtilitiesCoverage.png" width="360"/>
 <img src="media/RangeCoverage.png" alt="media/RangeCoverage.png" width="360"/>
 Some branches of the code were inaccessable (infeasible path) so the statement coverage was unable to achieve atleast 90% for DataUtilities(89.9%) and Range(85%)
+
 # 6 Pros and Cons of coverage tools used and Metrics you report
 
 Text…
