--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -65,7 +65,9 @@ Some branches of the code were inaccessable (infeasible path) so the statement c
 
 # 6 Pros and Cons of coverage tools used and Metrics you report
 
-Text…
+Some Pros and Cons of EclEmma, which is the coverage tool we are that is it easy to use and was built into Eclipse already meaning that we did not have to install anything making the barrier to entry much lower than with the other suggested tools. It also included many important coverage metrics such as method coverage, branch coverage, and statement coverage giving us a comprehensive view of our test coverage. A downside of EclEmma is that is does not include support for Condition Coverage which forced us to replace that metric with simple method coverage, which doesn't give us as much information on the quality of our test coverage.
+
+The pros and cons of each of the metrics we reported will now be discussed. Method coverage is the weakest of the three metrics we reported and does not give a very good idea of how comprehesive our test suite actually is, providing on the bare minimum of whether or not all methods are even tested. However, it does provide a good quick-glance overview to ensure that all functions of the program have at least some level of testing. Statement coverage provides a good measure of the amount of code that has been executed during testing and can help identify untested code segments that may contain errors. It is much more comprehensive than method coverage, however, it doesn't check whether all paths through the code are tested, only that all lines are reached. Branch coverage is most comprehensive of the 3 and can identify untested decision points in the code and can also help identify potential errors in the decision-making process of the code. The disadvantages of it are that it can be more difficult to measure and interpret than statement coverage and it can provide a false sense of security as it doesn't measure the quality of the tests.
 
 # 7 A comparison on the advantages and disadvantages of requirements-based test generation and coverage-based test generation.
 
