--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -58,7 +58,10 @@ This test case increased method coverage, and branch coverage for the calculateC
 passed it as an argument in calculateColumnTotal(Values2D data, int column,int[] validRows). This covers the calculateColumnTotal(Values2D data, int column,int[] validRows) method not previously covered, the branch in the function of the for loop where the length is equals to zero and does not enterr into the for loop.
 
 # 5 A detailed report of the coverage achieved of each class and method (a screen shot from the code cover results in green and red color would suffice)
-
+**Old assignment 2 Coverage **
+<img src="media/DataUtilitiesCoverageOld.png" alt="media/DataUtilitiesCoverage.png" width="360"/>
+<img src="media/RangeCoverageOld.png" alt="media/RangeCoverage.png" width="360"/>
+**New Improved Coverage **
 <img src="media/DataUtilitiesCoverage.png" alt="media/DataUtilitiesCoverage.png" width="360"/>
 <img src="media/RangeCoverage.png" alt="media/RangeCoverage.png" width="360"/>
 Some branches of the code were inaccessable (infeasible path) so the statement coverage was unable to achieve atleast 90% for DataUtilities(89.9%) and Range(85%)
