--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -74,7 +74,32 @@ The pros and cons of each of the metrics we reported will now be discussed. Meth
 
 # 7 A comparison on the advantages and disadvantages of requirements-based test generation and coverage-based test generation.
 
-Text…
+
+Requirements-based test generation:
+Requirements-based test generation is a testing approach that involves creating test cases based directly off of the software requirements.  
+
+Advantages:
+- It ensures that the software is tested against the desired functionality, as defined by the requirements.
+- It can help identify gaps or ambiguities in the requirements, which can be addressed before the software is developed.
+- It can help ensure that the software meets the customer's expectations.  
+
+Disadvantages:
+- It may not cover all possible scenarios or edge cases that are not explicitly stated in the requirements.
+- It may be difficult to ensure that all the requirements are adequately tested, as some requirements may be complex or difficult to verify.
+- It may be time-consuming to derive test cases from the requirements, especially for large or complex software systems.  
+
+Coverage-based test generation:
+Coverage-based test generation is a testing approach that is based around measuring the coverage of the code and generating test cases to ensure that all code paths are executed. 
+
+Advantages:
+- It can in some cases be more comprehensive
+- It can help identify untested areas of the code
+- It can be automated, making it easier and faster to generate test cases.
+
+Disadvantages:
+- It may not cover all possible scenarios or edge cases that are not related to code paths, such as performance or security issues.
+- It may not ensure that the software meets the desired functionality, as defined by the requirements.
+- It may generate redundant or unnecessary test cases, increasing the time and effort required for testing.
 
 # 8 A discussion on how the team work/effort was divided and managed
 
