--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -18,8 +18,81 @@ for each group. Please see each lab document for details.)
 The purpose of this assignment was to perform more unit testing using Junit in eclipse. In the last assignment we were tasked with created black box unit tests using Junit, and in this assignment we will create more unit tests through white box testing. We will be developing tests using the white box technique and attempting to increase the coverage of 2 classes within JFreeChart, these are Datautilities and Range. We will be using Eclipse's built in coverage tool to check the adequecy of the written unit tests. There are 3 types of coverage that we will be focusing on in this assignment, these are Statement, Branch and Method Coverage. 
 
 # 2 Manual data-flow coverage calculations for X and Y methods
+**calculateColumnTotal data flow**
 
-Text…
+1. public static double calculateColumnTotal(Values2D data, int column) {  
+2.  ParamChecks.nullNotPermitted(data, "data");  
+3. double total = 0.0;  
+4. int rowCount = data.getRowCount();  
+5.  for (int r = 0; r < rowCount; r++) {    
+6.     Number n = data.getValue(r, column);      
+7.       if (n != null) {    
+8.          total += n.doubleValue();  
+            }  
+9. }  
+10.  for (int r2 = 0; r2 > rowCount; r2++) {  
+11.      Number n = data.getValue(r2, column);  
+12.     if (n != null) {  
+13.         total += n.doubleValue();  
+         }  
+14.   }  
+15.    return total;  
+
+    
+Line 1: Def(data), Def(column)  
+Line 3: Def(total)  
+Line 4: Def(rowCount), Use(data)  
+Line 5: Def(r), Use(rowCount), Use(r)  
+Line 6: Def(n), Use(r), Use(data), Use(column)  
+Line 7: Use(n)  
+Line 8: Use(total), Use(n)  
+Line 9: Use(r)  
+Line 10: Def(r2), Use(rowCount), Use(r2)  
+Line 11(unreachable): Def(n), Use(data), Use(r2), Use(column)  
+Line 12(unreachable): Use(n)  
+Line 13(unreachable): Use(total), Use(n)  
+Line 14(unreachable): Use(r2)  
+Line 15: Use(total)  
+
+
+Test case coverage
+
+Test case: calculateValidRows()
+1 -> 2 -> 3 -> 4 -> section repeated 4 times (5 -> 6 -> 7 -> 8 -> 9 ) ->10 ->15 
+
+13/22 (59.1%) DU pairs covered
+
+Covered: data(1,4), data(1,6), column(1,6), total(3,8), total(3,15), rowCount(4,5), rowCount(4,10), r(5,5), r(5,6), r(5,9), n(6,7), n(6,8), r2(10,10)
+
+Test case: calculateNoRow()
+
+1-> 2 -> 3 -> 4 -> 5 -> 10 -> 15
+
+5/22 (22.7%) DU pairs covered
+
+
+Covered: data(1,4), total(3,15), rowCount(4,5), r(5,5), r2(10,10)
+
+Test case: calculateInvalidRow()
+1 -> 2 -> 3 -> 4 -> section repeated 4 times (5 -> 6 -> 7 -> 9 ) ->10 ->15 
+
+11/22 (50%) DU pairs covered
+
+Covered: data(1,4), data(1,6), column(1,6),  total(3,15), rowCount(4,5), rowCount(4,10), r(5,5), r(5,6), r(5,9), n(6,7), r2(10,10)
+
+Test case: nullObjectTest()
+1 -> 2 
+
+0/22 (0%) DU pairs covered
+
+Test case: negativeColumnTest()
+1-> 2 -> 3 -> 4 -> 5 -> 10 -> 15
+
+5/22 (22.7%) DU pairs covered
+
+
+Covered: data(1,4), total(3,15), rowCount(4,5), r(5,5), r2(10,10)
+
 
 # 3 A detailed description of the testing strategy for the new unit test
 
