--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -20,6 +20,7 @@ The purpose of this assignment was to perform more unit testing using Junit in e
 # 2 Manual data-flow coverage calculations for X and Y methods
 **calculateColumnTotal data flow**
 
+
 1. public static double calculateColumnTotal(Values2D data, int column) {  
 2.  ParamChecks.nullNotPermitted(data, "data");  
 3. double total = 0.0;  
@@ -37,7 +38,6 @@ The purpose of this assignment was to perform more unit testing using Junit in e
          }  
 14.   }  
 15.    return total;  
-
     
 Line 1: Def(data), Def(column)  
 Line 3: Def(total)  
@@ -54,8 +54,13 @@ Line 13(unreachable): Use(total), Use(n)
 Line 14(unreachable): Use(r2)  
 Line 15: Use(total)  
 
+**data flow chart**   
+<img src="media/calculateColumnTotalDataFlowChart.png" alt="media/DataUtilitiesCoverage.png" width="360"/>  
 
-Test case coverage
+**du table**  
+<img src="media/calculateColumnTotalDUTable.png" alt="media/DataUtilitiesCoverage.png" width="360"/>  
+
+**Test case coverage**
 
 Test case: calculateValidRows()
 1 -> 2 -> 3 -> 4 -> section repeated 4 times (5 -> 6 -> 7 -> 8 -> 9 ) ->10 ->15 
