--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -98,6 +98,66 @@ Test case: negativeColumnTest()
 
 Covered: data(1,4), total(3,15), rowCount(4,5), r(5,5), r2(10,10)
 
+## Manual data flow calculations for Range.intersects
+
+
+
+| Variable   | Def-line    | Use-line | DU pairs |
+| -------------- | --- | ----| ---- |
+| b0 | 1 | 3, 7 | (1, 3), (1, 7) |
+| b1 | 1 | 4, 7 | (1, 4), (1, 7) |
+| this.lower | 0 | 3,4 | (0,3), (0,4) |
+| this.upper | 0 | 7 | (0,7) |
+
+
+
+Test case: intersectInvalidParamaters  
+1 -> 2 -> 3 -> 6 -> 7  
+Covers: b0(1,3), this.lower(0,3), b0(1,7), this.upper(0.7), b1(1,7)  
+5/7 (71.4%) DU pairs covered  
+
+Test case: intersectUpperBoundNotOverLapping  
+1 -> 2 -> 3 -> 6 -> 7  
+Covers: b0(1,3), this.lower(0,3), b0(1,7), this.upper(0.7), b1(1,7)  
+5/7 (71.4%) DU pairs covered  
+
+Test case: intersectLowerBoundNotOverLapping  
+1 -> 2 -> 3 -> 6 -> 7  
+Covers: b0(1,3), this.lower(0,3), b0(1,7), this.upper(0.7), b1(1,7)  
+5/7 (71.4%) DU pairs covered  
+
+Test case: intersectUpperBoundOverLapping  
+1 -> 2 -> 3 -> 6 -> 7  
+Covers: b0(1,3), this.lower(0,3), b0(1,7), this.upper(0.7), b1(1,7)  
+5/7 (71.4%) DU pairs covered  
+
+Test case: intersectLowerBoundOverLapping  
+1 -> 2 -> 3 -> 4  
+Covers: b0(1,3), this.lower(0,3), b1(1,4), this.lower(0,4)  
+4/7 (57.1%) DU pairs covered  
+
+Test case: intersectBothBoundsOverLapping  
+1 -> 2 -> 3 -> 4  
+Covers: b0(1,3), this.lower(0,3), b1(1,4), this.lower(0,4)  
+4/7 (57.1%) DU pairs covered  
+
+Test case: intersectNoRangeOverLapping  
+1 -> 2 -> 3 -> 6 -> 7  
+Covers: b0(1,3), this.lower(0,3), b0(1,7), this.upper(0.7), b1(1,7)  
+5/7 (71.4%) DU pairs covered  
+
+Test case: intersectUpperBoundNoOverlapping  
+1 -> 2 -> 3 -> 6 -> 7  
+Covers: b0(1,3), this.lower(0,3), b0(1,7), this.upper(0.7), b1(1,7)  
+5/7 (71.4%) DU pairs covered  
+
+Test case: intersectLowerBoundNoOverlapping  
+1 -> 2 -> 3 -> 4  
+Covers: b0(1,3), this.lower(0,3), b1(1,4), this.lower(0,4)  
+4/7 (57.1%) DU pairs covered  
+
+
+
 
 # 3 A detailed description of the testing strategy for the new unit test
 
