--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -17,8 +17,9 @@ for each group. Please see each lab document for details.)
 
 The purpose of this assignment was to perform more unit testing using Junit in eclipse. In the last assignment we were tasked with created black box unit tests using Junit, and in this assignment we will create more unit tests through white box testing. We will be developing tests using the white box technique and attempting to increase the coverage of 2 classes within JFreeChart, these are Datautilities and Range. We will be using Eclipse's built in coverage tool to check the adequecy of the written unit tests. There are 3 types of coverage that we will be focusing on in this assignment, these are Statement, Branch and Method Coverage. 
 
-# 2 Manual data-flow coverage calculations for X and Y methods
-**calculateColumnTotal data flow**
+# 2 Manual data-flow coverage calculations for X and Y methods  
+
+## Manual data flow calculations for DataUtilities.calculateColumnTotal  
 
 ```
 1. public static double calculateColumnTotal(Values2D data, int column) {  
@@ -197,12 +198,12 @@ passed it as an argument in calculateColumnTotal(Values2D data, int column,int[]
 
 # 5 A detailed report of the coverage achieved of each class and method (a screen shot from the code cover results in green and red color would suffice)
 
-**Old assignment 2 Coverage **
+**Old assignment 2 Coverage**     
 
 <img src="media/DataUtilitesCoverageOld.png" alt="media/DataUtilitiesCoverage.png" width="360"/>
 <img src="media/RangeCoverageOld.png" alt="media/RangeCoverage.png" width="360"/>
 
-**New Improved Coverage **
+**New Improved Coverage**    
 
 <img src="media/DataUtilitiesCoverage.png" alt="media/DataUtilitiesCoverage.png" width="360"/>
 <img src="media/RangeCoverage.png" alt="media/RangeCoverage.png" width="360"/>
