--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -101,6 +101,33 @@ Covered: data(1,4), total(3,15), rowCount(4,5), r(5,5), r2(10,10)
 
 ## Manual data flow calculations for Range.intersects
 
+Def-use sets per statement:
+2nd method
+
+ 1.    public boolean intersects(double b0, double b1) {
+ 2.        if (b0 <= this.lower) {
+ 3.            return (b1 > this.lower);
+ 4.       }
+ 5.        else {
+ 6.            return (b0 < this.upper && b1 >= b0);
+ 7.        }
+ 8.    }
+
+(before function call)
+def(this.lower), def(this. upper)
+(after function call - numbers correlate to code above)
+1. def(b0), def(b1)
+2. use(b0), use(this.lower)
+3. use(b1), use(this.lower)
+4. 
+5.
+6. use(b1), use(b0), use(this.upper)
+7.
+8.
+
+
+
+
 
 
 | Variable   | Def-line    | Use-line | DU pairs |
