--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -102,7 +102,7 @@ Covered: data(1,4), total(3,15), rowCount(4,5), r(5,5), r2(10,10)
 ## Manual data flow calculations for Range.intersects
 
 **data flow chart**   
-<img src="media/intersacts.png" alt="media/intersects.png" width="360"/>  
+<img src="media/intersect.png" alt="media/intersect.png" width="360"/>  
 
 Def-use sets per statement:
 2nd method
