--- a/seng438-a3-26.md
+++ b/seng438-a3-26.md
@@ -52,7 +52,7 @@ Line 10: Def(r2), Use(rowCount), Use(r2)
 Line 11(unreachable): Def(n), Use(data), Use(r2), Use(column)  
 Line 12(unreachable): Use(n)  
 Line 13(unreachable): Use(total), Use(n)  
-Line 14(unreachable): Use(r2)  
+Line 14: Use(r2)  
 Line 15: Use(total)  
 ```
 **data flow chart**   
